add feature-footer text

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -24,7 +24,9 @@
                     <button class="score-button">- 1</button>
                 </div>
             </div>
-            <footer></footer>
+            <footer>
+              <p>Made by Tomatoes, Inc.</p>
+            </footer>
         </div>
     </body>
 </html>
